# InfoTechsTestTask

./: CMakeLists.txt  README.md  fileLogger.cpp  fileLogger.hpp  importance.cpp  importance.hpp  logger.hpp  main.cpp  socketLogger.cpp  socketLogger.hpp
